# pwncrypt-ransomware-hunt

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  architecture.mmd  devcontainer.json  mkdocs.yml  pyproject.toml
