[project]
name = "pwncrypt-labreport"
version = "0.1.0"
description = "Tiny CLI to summarize PwnCrypt lab logs into a Markdown incident report."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Qexa Labs", email = "support@qexa.com" }]
dependencies = ["typer>=0.12.3", "rich>=13.7.1"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[project.scripts]
labreport = "labreport.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
